--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>fr.xebia.blog</groupId>
     <artifactId>gitBestPractice</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
